Add portfolio images

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -122,3 +122,11 @@ footer > ul {
     font-size: .25em;
   }
 }
+.portfolio {
+  text-align: center;
+}
+.portfolio-pics {
+  border: 2px solid black;
+  width: 30%;
+  height: auto;
+}
