--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,7 @@ body {
   color: #222222;
   font-size: 1em;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 .masthead-intro,
 .masthead-heading,
@@ -73,7 +74,7 @@ nav {
 .social > li {
   display: inline-block;
   padding: 15px;
-  text-shadow: 1px 1px 1px #F0CE1C;
+  text-shadow: 1px 1px 1px #000;
 }
 .content-footer > p {
   color: white;
@@ -99,16 +100,26 @@ section > h1 {
   margin-top: 2em;
 }
 footer {
-  background-color: #A7D4F2;
+  background-color: #da5608;
   padding: 1em 0;
   border-radius: 20px;
 }
-a {
+.introduction-section > p > a,
+.location-section > p > a,
+.questions-section > p > a {
   text-decoration: none;
   color: #F07A0E;
 }
-a:hover {
-  color: #F1CE1F;
+.content-footer > .social > li > a,
+.content-footer > p > a {
+  text-decoration: none;
+  color: #a9d4f3;
+}
+.introduction-section > p > a:hover,
+.location-section > p > a:hover,
+.questions-section > p > a:hover,
+.content-footer > .social > li > a:hover {
+  color: #F0ce1c;
 }
 footer > ul {
   list-style-type: none;
@@ -130,4 +141,12 @@ footer > ul {
   border: 2px solid black;
   width: 30%;
   height: auto;
+}
+.pages > li > h2 > a {
+  color: white;
+  text-decoration: none;
+}
+.pages > li > h2 > a:hover {
+  color: #f0ce1c;
+  text-decoration: none;
 }
