--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,17 +47,17 @@ body {
   text-shadow: 1px 1px 1px #D6580C;
 }
 nav {
-  border: 3px solid #da5608;
+  border: 1px solid #da5608;
   border-radius: 20px;
   background-color: #da5608; 
   text-transform: uppercase;
   text-shadow: 1px 1px 1px #000;
   color: white;
-}
+ }
 .pages > li {
   display: inline-block;
-  padding: 15px -20px;
-  margin: 0 50px;
+  padding: 15px -50px;
+  margin: 0 75px;
   color: white;
   text-shadow: 1px 1px 1px black;
 }
@@ -87,7 +87,8 @@ nav {
   font-weight: 300;
   letter-spacing: 0.05em;
 }
-.questions-section > h2 {
+.questions-section > h2,
+.portfolio > h2 {
   /* Typography Declarations */
   font-family: "Gentium Book Basic", "Georgia", serif;
   font-size: 1.2em;
@@ -106,19 +107,23 @@ footer {
 }
 .introduction-section > p > a,
 .location-section > p > a,
-.questions-section > p > a {
+.questions-section > p > a,
+.portfolio > p > a {
   text-decoration: none;
   color: #F07A0E;
 }
 .content-footer > .social > li > a,
-.content-footer > p > a {
+.content-footer > p > a,
+.blog-page > a {
   text-decoration: none;
   color: #a9d4f3;
 }
 .introduction-section > p > a:hover,
 .location-section > p > a:hover,
 .questions-section > p > a:hover,
-.content-footer > .social > li > a:hover {
+.content-footer > .social > li > a:hover,
+.portfolio > p > a:hover
+.blog-page > a:hover {
   color: #F0ce1c;
 }
 footer > ul {
